fix: updated the documentation to fit scheema
