# backend/docs/swagger.json
@@ -208,6 +208,52 @@
                     }
                 }
             },
+            "put": {
+                "description": "Updates a card in a deck in Firestore by ID",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Decks"
+                ],
+                "summary": "Update a card in a deck",
+                "parameters": [
+                    {
+                        "description": "Deck info",
+                        "name": "user",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.AnyCard"
+                        }
+                    },
+                    {
+                        "type": "string",
+                        "description": "Deck ID",
+                        "name": "deckID",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Card ID",
+                        "name": "cardID",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.DeckResponse"
+                        }
+                    }
+                }
+            },
             "delete": {
                 "description": "Deletes a card from a specified deck by its ID",
                 "consumes": [
@@ -239,52 +285,6 @@
                 "responses": {
                     "204": {
                         "description": "No Content"
-                    }
-                }
-            },
-            "patch": {
-                "description": "Updates a decks cards in Firestore by ID",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Decks"
-                ],
-                "summary": "Update a decks' cards",
-                "parameters": [
-                    {
-                        "description": "Deck info",
-                        "name": "user",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/models.UpdateDeckCards"
-                        }
-                    },
-                    {
-                        "type": "string",
-                        "description": "Deck ID",
-                        "name": "deckID",
-                        "in": "path",
-                        "required": true
-                    },
-                    {
-                        "type": "string",
-                        "description": "Card ID",
-                        "name": "cardID",
-                        "in": "path",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/models.DeckResponse"
-                        }
                     }
                 }
             }
@@ -415,7 +415,7 @@
                 }
             },
             "patch": {
-                "description": "Updates/replaces data",
+                "description": "Return updated user information",
                 "consumes": [
                     "application/json"
                 ],
@@ -425,10 +425,17 @@
                 "tags": [
                     "Users"
                 ],
-                "summary": "Patch the users' data by ID",
+                "summary": "Update a user in firestore by their ID",
                 "parameters": [
                     {
-                        "description": "User info",
+                        "type": "string",
+                        "description": "User ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "description": "User info to update",
                         "name": "user",
                         "in": "body",
                         "required": true,
@@ -438,8 +445,11 @@
                     }
                 ],
                 "responses": {
-                    "204": {
-                        "description": "No Content"
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.User"
+                        }
                     }
                 }
             }
@@ -714,28 +724,6 @@
             "properties": {
                 "title": {
                     "type": "string"
-                }
-            }
-        },
-        "models.UpdateDeckCards": {
-            "type": "object",
-            "required": [
-                "cards",
-                "opp"
-            ],
-            "properties": {
-                "cards": {
-                    "type": "array",
-                    "items": {
-                        "type": "string"
-                    }
-                },
-                "opp": {
-                    "type": "string",
-                    "enum": [
-                        "add",
-                        "remove"
-                    ]
                 }
             }
         },
